@@ -275,49 +275,7 @@
       <td>1.8.1</td>
       <td>Anthony Fok (Debian)</td>
     </tr>
-
-    <tr>
-
-      <td><p align="center"><img src="@IMAGES@redhat-logo.png"></p></td>
-      <td>
-	Red Hat
-      </td>
-      <td>
-	9 
-      </td>
-      <td>
-	<strong>
-	  Download 
-	  <a href="http://lilypond.org/download/binaries/RedHat-9/lilypond-1.8.2-1.i386.rpm">lilypond</a>,
-	  
-	  <a href="http://lilypond.org/download/binaries/RedHat-9/lilypond-documentation-1.8.2-1.i386.rpm">documentation</a>
-	  (<a href="#redhat-notes">NOTE</a>)
-      </td>
-      <td>1.8.2</td>  
-      <td><a href="mailto:bug-lilypond@gnu.org">LilyPond development team</a></td>
-    </tr>
-
-    <tr>
-      <td><p align="center"><img src="@IMAGES@redhat-logo.png"></p></td>
-      <td>
-	Red Hat 
-      </td>
-      <td>
-	8, 9
-      </td>
-      <td>
-	<strong>Go to
-	  <a href="http://www-ccrma.stanford.edu/planetccrma/software/soundapps.html#lilypond">
-	    Planet CCRMA</a>
-	  
-      </td>
-      <td>1.8.0</td>
-      <td>
-	<a href="mailto:planetccrma@ccrma.stanford.edu">
-	  PlanetCCRMA</a></td>
-    </tr>
-
-
+    
     <tr>
       <td><p align="center"><img src="@IMAGES@mandrake-logo.jpeg"></p></td>
       <td>
